<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Food"
    android:background="@drawable/wikibackground">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:srcCompat="@drawable/food_guide" />

            <TextView
                android:id="@+id/textfoodtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/what_is_food"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textfood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/textfood1"
                tools:layout_editor_absoluteX="160dp"
                tools:layout_editor_absoluteY="335dp" />

            <TextView
                android:id="@+id/textfood2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/textfood2"
                tools:layout_editor_absoluteX="160dp"
                tools:layout_editor_absoluteY="335dp" />

            <TextView
                android:id="@+id/textfood3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/textfood3"
                tools:layout_editor_absoluteX="160dp"
                tools:layout_editor_absoluteY="335dp" />

            <TextView
                android:id="@+id/textcrops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/crops"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textcropsexpli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/cropecplication"
                tools:layout_editor_absoluteX="160dp"
                tools:layout_editor_absoluteY="335dp" />

            <TextView
                android:id="@+id/textviewmoreguidde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_horizontal"
                android:text="@string/other_guides"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imagetomatomenu"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/tomato"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toStartOf="@+id/imageelementmenu"
                    app:layout_constraintStart_toEndOf="@+id/imageheartmenu"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/tomato" />

                <ImageButton
                    android:id="@+id/imageheartmenu"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/heart"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toStartOf="@+id/imagetomatomenu"
                    app:layout_constraintStart_toEndOf="@+id/imagearenamenu"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/heart" />

                <ImageButton
                    android:id="@+id/imagearenamenu"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/introduction_arena"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toStartOf="@+id/imageheartmenu"
                    app:layout_constraintStart_toEndOf="@+id/imagegoldmenu"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/monster_arena" />

                <ImageButton
                    android:id="@+id/imagegoldmenu"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/gold"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toStartOf="@+id/imagearenamenu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/mini_gold" />

                <ImageButton
                    android:id="@+id/imageelementmenu"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/elements"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imagetomatomenu"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/element_any" />

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>