<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gold_farming">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/gold_guide" />

            <TextView
                android:id="@+id/textintroduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/introduction"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/introduction_gold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="31dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/description_gold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="145dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/imgdailybonus"
                tools:layout_editor_absoluteY="477dp" />

            <TextView
                android:id="@+id/textviewmoreguidde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_horizontal"
                android:text="@string/other_guides"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imagetomatomenu"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/tomato"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toStartOf="@+id/imageelementmenu"
                    app:layout_constraintStart_toEndOf="@+id/imageheartmenu"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/tomato" />

                <ImageButton
                    android:id="@+id/imageheartmenu"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/heart"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toStartOf="@+id/imagetomatomenu"
                    app:layout_constraintStart_toEndOf="@+id/imagearenamenu"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/heart" />

                <ImageButton
                    android:id="@+id/imagearenamenu"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/introduction_arena"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toStartOf="@+id/imageheartmenu"
                    app:layout_constraintStart_toEndOf="@+id/imagegoldmenu"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/monster_arena" />

                <ImageButton
                    android:id="@+id/imagegoldmenu"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/gold"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toStartOf="@+id/imagearenamenu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/mini_gold" />

                <ImageButton
                    android:id="@+id/imageelementmenu"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/elements"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imagetomatomenu"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/element_any" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>